--- a/main_tom.ipynb
+++ b/main_tom.ipynb
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "240b5a28",
+   "id": "71cd9375",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "89e3990e",
+   "id": "3f87c072",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
       "/root/anaconda3/envs/py3.7KLUE/lib/python3.7/site-packages/torch/nn/modules/rnn.py:61: UserWarning: dropout option adds dropout after all but last recurrent layer, so non-zero dropout expects num_layers greater than 1, but got dropout=0.33 and num_layers=1\n",
       "  \"num_layers={}\".format(dropout, num_layers))\n",
-      "1563it [12:11,  2.14it/s]\n"
+      "6250it [48:52,  2.13it/s]\n"
      ]
     }
    ],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "49241e9a",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "55fdc736",
    "metadata": {},
    "outputs": [],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "6011c172",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "d5d69d80",
    "metadata": {
     "scrolled": true
@@ -1195,7 +1195,7 @@
        " ...]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "e16d2d85",
    "metadata": {},
    "outputs": [],
@@ -1225,6 +1225,7 @@
     "            if l < 3:\n",
     "                writer.writerow(line)\n",
     "            else:\n",
+    "                \n",
     "                writer.writerow(line[:-2]+out[idx])\n",
     "                idx += 1\n",
     "    "
@@ -1232,8 +1233,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "bf7d880a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1343074"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "38956c1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1343074"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4bb793e",
    "metadata": {},
    "outputs": [],
    "source": []
