Changes to be committed: 	modified:   data/03_DP.tsv 	modified:   main_tom.ipynb

--- a/main_tom.ipynb
+++ b/main_tom.ipynb
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "71cd9375",
+   "id": "5264f141",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3f87c072",
+   "id": "8505e813",
    "metadata": {},
    "outputs": [
     {
@@ -1219,6 +1219,8 @@
     "        writer=csv.writer(jo, delimiter='\\t')\n",
     "\n",
     "        for i, line in enumerate(reader):\n",
+    "            if i < 6:\n",
+    "                continue\n",
     "\n",
     "            l = len(line)\n",
     "\n",
@@ -1255,7 +1257,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "38956c1b",
+   "id": "639ad11f",
    "metadata": {},
    "outputs": [
     {
@@ -1276,7 +1278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4bb793e",
+   "id": "b52e9b6b",
    "metadata": {},
    "outputs": [],
    "source": []
